inicio da vitrine de imóveis

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Inforce | Desafio Front-End</title>
 </head>
+
 <body>
   <header class="center">
     <picture class="logo-header"><img src="media/logo_topo.png" alt="Infoce"></picture>
@@ -28,8 +30,83 @@
     <a href="#">Call to Action</a>
   </section>
 
+  <section class="vitrine center">
+    <h1>Vitrine de Imóveis</h1>
+    <ul class="imoveis">
+      <li>
+        <div class="imovel">
+          <picture><img src="media/imoveis/imovel1.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Apartamento</h2>
+          <p>Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p>2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p>1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p>190m²</p>
+            </div>
+          </div>
+          <a href="#">Veja Mais</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="imovel">
+          <picture><img src="media/imoveis/imovel2.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Apartamento</h2>
+          <p>Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p>2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p>1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p>190m²</p>
+            </div>
+          </div>
+          <a href="#">Veja Mais</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="imovel">
+          <picture><img src="media/imoveis/imovel3.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Apartamento</h2>
+          <p>Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p>2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p>1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p>190m²</p>
+            </div>
+          </div>
+          <a href="#">Veja Mais</a>
+        </div>
+      </li>
+    </ul>
+  </section>
+
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
