--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     </ul>
   </section>
 
+  <section class="texto-bg">
+    <div class="texto">
+      <a href="#">Call to Action</a>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat aperiam velit perspiciatis quod quisquam similique iure, obcaecati numquam?</p>
+    </div>
+  </section>
+
 
 
   <script src="script.js"></script>
