inicio de ultimas notícias

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <a href="#">Call to Action</a>
   </section>
 
-  <section class="vitrine center">
+  <section class="vitrine-noticias center">
     <h1>Vitrine de Imóveis</h1>
-    <ul class="imoveis">
+    <ul class="lista-cards">
       <li>
-        <div class="imovel">
+        <div class="card">
           <picture><img src="media/imoveis/imovel1.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
           <h2>Apartamento</h2>
           <p>Barra da Tijuca - RJ</p>
@@ -57,7 +57,7 @@
       </li>
 
       <li>
-        <div class="imovel">
+        <div class="card">
           <picture><img src="media/imoveis/imovel2.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
           <h2>Apartamento</h2>
           <p>Barra da Tijuca - RJ</p>
@@ -80,7 +80,7 @@
       </li>
 
       <li>
-        <div class="imovel">
+        <div class="card">
           <picture><img src="media/imoveis/imovel3.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
           <h2>Apartamento</h2>
           <p>Barra da Tijuca - RJ</p>
@@ -109,6 +109,38 @@
       <a href="#">Call to Action</a>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat aperiam velit perspiciatis quod quisquam similique iure, obcaecati numquam?</p>
     </div>
+  </section>
+
+  <section class="vitrine-noticias center">
+    <h1>Ultimas Notícias</h1>
+    <ul class="lista-cards">
+      <li>
+        <div class="card">
+          <picture><img src="media/noticias/noticia1.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Título da Notícia</h2>
+          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <a href="#">Buttom</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card">
+          <picture><img src="media/noticias/noticia2.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Título da Notícia</h2>
+          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <a href="#">Buttom</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card">
+          <picture><img src="media/noticias/noticia3.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
+          <h2>Título da Notícia</h2>
+          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <a href="#">Buttom</a>
+        </div>
+      </li>
+    </ul>
   </section>
 
 
