--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </section>
 
   <section class="vitrine-noticias center">
-    <h1>Vitrine de Imóveis</h1>
+    <h1 class="titulo-1">Vitrine de Imóveis</h1>
     <ul class="lista-cards">
       <li>
         <div class="card">
@@ -112,7 +112,7 @@
   </section>
 
   <section class="vitrine-noticias center">
-    <h1>Ultimas Notícias</h1>
+    <h1 class="titulo-1">Ultimas Notícias</h1>
     <ul class="lista-cards">
       <li>
         <div class="card">
@@ -141,6 +141,17 @@
         </div>
       </li>
     </ul>
+  </section>
+
+  <section class="mais-acessados center">
+    <h1 class="titulo-1">Mais Acessados</h1>
+    <div>
+      <a href="#">Apartamento na Barra</a>
+      <a href="#">Apartamento na Barra</a>
+      <a href="#">Apartamento na Barra</a>
+      <a href="#">Apartamento na Barra</a>
+      <a href="#">Apartamento na Barra</a>
+    </div>
   </section>
 
 
