--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
     </div>
   </section>
 
+  <section class="localizacao">
+    <h1 class="titulo-1">Localização</h1>
+    <div class="mapa">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.570967020847!2d-43.32386898519964!3d-23.002798984963057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd0a4f97e4b81%3A0x8c339c13e5009d61!2sInforce%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1667597869024!5m2!1spt-BR!2sbr" width="1340" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </section>
+
 
 
   <script src="script.js"></script>
