--- a/index.html
+++ b/index.html
@@ -161,6 +161,32 @@
     </div>
   </section>
 
+  <footer>
+    <div class="footer center">
+      <picture><img src="media/logo_footer.png" alt="Inforce logo"></picture>
+      <div class="container">
+        <h2>Footer Menu</h2>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 1</li>
+          <li>Item 3</li>
+        </ul>
+      </div>
+
+      <div class="container">
+        <h2>Footer Menu</h2>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 1</li>
+          <li>Item 3</li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>2022 © Todos os direitos reservados - Code by Thiago Rocha.</p>
+      </div>
+    </div>
+  </footer>
+
 
 
   <script src="script.js"></script>
