API utilizada no banner e carrossel

--- a/index.html
+++ b/index.html
@@ -12,23 +12,35 @@
 
 <body>
   <header class="center">
-    <picture class="logo-header"><img src="media/logo_topo.png" alt="Infoce"></picture>
-    <nav class="nav-header">
-      <button id="btn-mobile">Menu <span id="hamburger"></span></button>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Imóveis</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li class="fale-conosco"><a href="#">Fale Conosco</a></li>
-      </ul>
-    </nav>
+    <div class="header">
+      <picture class="logo-header"><img src="media/logo_topo.png" alt="Infoce"></picture>
+      <nav class="nav-header">
+        <button id="btn-mobile">Menu <span id="hamburger"></span></button>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Imóveis</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li class="fale-conosco"><a href="#">Fale Conosco</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="center banner">
-    <picture>
-      <img src="media/banner2.jpg" alt="Pão de açucar e Baia de Guanabara">
-    </picture>
-    <a href="#">Call to Action</a>
+  <section class="banner center">
+    <div class="carrosel">
+      <ul class="slides">
+        <li class="slide">
+          <img id="banner1" src="" alt="Pão de açucar e Baia de Guanabara">
+          <p id="texto1"></p>
+          <a href="">Call to Action</a>
+        </li>
+        <li class="slide">
+          <img id="banner2" src="" alt="Pão de açucar e Baia de Guanabara">
+          <p id="texto2"></p>
+          <a id="banner-button1" href="">Call to Action</a>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <section class="vitrine-noticias center">
