implementação da API Imóveis

--- a/index.html
+++ b/index.html
@@ -48,70 +48,139 @@
     <ul class="lista-cards">
       <li>
         <div class="card">
-          <picture><img src="media/imoveis/imovel1.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Apartamento</h2>
-          <p>Barra da Tijuca - RJ</p>
+          <picture><img id="capa0" src="" alt="Imóvel"></picture>
+          <h2 id="tipo0"></h2>
+          <p id="bairro0"></p>
           <div class="detalhes">
             <div class="quartos">
               <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
-              <p>2</p>
+              <p id="quartos0"></p>
             </div>
             <div class="vagas">
               <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
-              <p>1</p>
+              <p id="vagas0"></p>
             </div>
             <div class="area">
               <span><img src="media/svg/square-solid.svg" alt="Area"></span>
-              <p>190m²</p>
+              <p id="metragem0"></p>
             </div>
           </div>
-          <a href="#">Veja Mais</a>
+          <a id="link" href="#">Veja Mais</a>
         </div>
       </li>
 
       <li>
         <div class="card">
-          <picture><img src="media/imoveis/imovel2.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Apartamento</h2>
-          <p>Barra da Tijuca - RJ</p>
+          <picture><img id="capa1" src="media/imoveis/imovel2.jpg" alt="Imóvel"></picture>
+          <h2 id="tipo1">Apartamento</h2>
+          <p id="bairro1">Barra da Tijuca - RJ</p>
           <div class="detalhes">
             <div class="quartos">
               <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
-              <p>2</p>
+              <p id="quartos1">2</p>
             </div>
             <div class="vagas">
               <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
-              <p>1</p>
+              <p id="vagas1">1</p>
             </div>
             <div class="area">
               <span><img src="media/svg/square-solid.svg" alt="Area"></span>
-              <p>190m²</p>
+              <p id="metragem1">190m²</p>
             </div>
           </div>
-          <a href="#">Veja Mais</a>
+          <a id="link" href="#">Veja Mais</a>
         </div>
       </li>
 
       <li>
         <div class="card">
-          <picture><img src="media/imoveis/imovel3.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Apartamento</h2>
-          <p>Barra da Tijuca - RJ</p>
+          <picture><img id="capa2" src="media/imoveis/imovel3.jpg" alt="Imóvel"></picture>
+          <h2 id="tipo2">Apartamento</h2>
+          <p id="bairro2">Barra da Tijuca - RJ</p>
           <div class="detalhes">
             <div class="quartos">
               <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
-              <p>2</p>
+              <p id="quartos2">2</p>
             </div>
             <div class="vagas">
               <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
-              <p>1</p>
+              <p id="vagas2">1</p>
             </div>
             <div class="area">
               <span><img src="media/svg/square-solid.svg" alt="Area"></span>
-              <p>190m²</p>
+              <p id="metragem2">190m²</p>
             </div>
           </div>
-          <a href="#">Veja Mais</a>
+          <a id="link" href="#">Veja Mais</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card">
+          <picture><img id="capa3" src="media/imoveis/imovel3.jpg" alt="Imóvel"></picture>
+          <h2 id="tipo3">Apartamento</h2>
+          <p id="bairro3">Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p id="quartos3">2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p id="vagas3">1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p id="metragem3">190m²</p>
+            </div>
+          </div>
+          <a id="link" href="#">Veja Mais</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card">
+          <picture><img id="capa4" src="media/imoveis/imovel3.jpg" alt="Imóvel"></picture>
+          <h2 id="tipo4">Apartamento</h2>
+          <p id="bairro4">Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p id="quartos4">2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p id="vagas4">1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p id="metragem4">190m²</p>
+            </div>
+          </div>
+          <a id="link" href="#">Veja Mais</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card">
+          <picture><img id="capa5" src="media/imoveis/imovel3.jpg" alt="Imóvel"></picture>
+          <h2 id="tipo5">Apartamento</h2>
+          <p id="bairro5">Barra da Tijuca - RJ</p>
+          <div class="detalhes">
+            <div class="quartos">
+              <span><img src="media/svg/bed-solid.svg" alt="Quartos"></span>
+              <p id="quartos5">2</p>
+            </div>
+            <div class="vagas">
+              <span><img src="media/svg/car-solid.svg" alt="Vagas"></span>
+              <p id="vagas5">1</p>
+            </div>
+            <div class="area">
+              <span><img src="media/svg/square-solid.svg" alt="Area"></span>
+              <p id="metragem5">190m²</p>
+            </div>
+          </div>
+          <a id="link" href="#">Veja Mais</a>
         </div>
       </li>
     </ul>
