implementação da API Ultimas Notícias

--- a/index.html
+++ b/index.html
@@ -197,28 +197,37 @@
     <h1 class="titulo-1">Ultimas Notícias</h1>
     <ul class="lista-cards">
       <li>
-        <div class="card">
-          <picture><img src="media/noticias/noticia1.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Título da Notícia</h2>
-          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+        <div class="card card-noticia">
+          <picture><img id="capa-noticia0" src=""></picture>
+          <h2 id="titulo0">Título da Notícia</h2>
+          <p id="sumario0">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
           <a href="#">Buttom</a>
         </div>
       </li>
 
       <li>
-        <div class="card">
-          <picture><img src="media/noticias/noticia2.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Título da Notícia</h2>
-          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+        <div class="card card-noticia">
+          <picture><img id="capa-noticia1" src="media/noticias/noticia2.jpg" ></picture>
+          <h2 id="titulo1">Título da Notícia</h2>
+          <p id="sumario1">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
           <a href="#">Buttom</a>
         </div>
       </li>
 
       <li>
-        <div class="card">
-          <picture><img src="media/noticias/noticia3.jpg" alt="Imóvel Barra da Tijuca - RJ"></picture>
-          <h2>Título da Notícia</h2>
-          <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+        <div class="card card-noticia">
+          <picture><img id="capa-noticia2" src="media/noticias/noticia3.jpg"></picture>
+          <h2 id="titulo2">Título da Notícia</h2>
+          <p id="sumario2">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <a href="#">Buttom</a>
+        </div>
+      </li>
+
+      <li>
+        <div class="card card-noticia">
+          <picture><img id="capa-noticia3" src="media/noticias/noticia3.jpg"></picture>
+          <h2 id="titulo3">Título da Notícia</h2>
+          <p id="sumario3">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
           <a href="#">Buttom</a>
         </div>
       </li>
