--- a/index.html
+++ b/index.html
@@ -199,35 +199,35 @@
       <li>
         <div class="card card-noticia">
           <picture><img id="capa-noticia0" src=""></picture>
-          <h2 id="titulo0">Título da Notícia</h2>
-          <p id="sumario0">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <h2 id="titulo0"></h2>
+          <p id="sumario0"></p>
           <a href="#">Buttom</a>
         </div>
       </li>
 
       <li>
         <div class="card card-noticia">
-          <picture><img id="capa-noticia1" src="media/noticias/noticia2.jpg" ></picture>
-          <h2 id="titulo1">Título da Notícia</h2>
-          <p id="sumario1">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <picture><img id="capa-noticia1" src=""></picture>
+          <h2 id="titulo1"></h2>
+          <p id="sumario1"></p>
           <a href="#">Buttom</a>
         </div>
       </li>
 
       <li>
         <div class="card card-noticia">
-          <picture><img id="capa-noticia2" src="media/noticias/noticia3.jpg"></picture>
-          <h2 id="titulo2">Título da Notícia</h2>
-          <p id="sumario2">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <picture><img id="capa-noticia2" src=""></picture>
+          <h2 id="titulo2"></h2>
+          <p id="sumario2"></p>
           <a href="#">Buttom</a>
         </div>
       </li>
 
       <li>
         <div class="card card-noticia">
-          <picture><img id="capa-noticia3" src="media/noticias/noticia3.jpg"></picture>
-          <h2 id="titulo3">Título da Notícia</h2>
-          <p id="sumario3">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web </p>
+          <picture><img id="capa-noticia3" src=""></picture>
+          <h2 id="titulo3"></h2>
+          <p id="sumario3"></p>
           <a href="#">Buttom</a>
         </div>
       </li>
@@ -237,11 +237,13 @@
   <section class="mais-acessados center">
     <h1 class="titulo-1">Mais Acessados</h1>
     <div>
-      <a href="#">Apartamento na Barra</a>
-      <a href="#">Apartamento na Barra</a>
-      <a href="#">Apartamento na Barra</a>
-      <a href="#">Apartamento na Barra</a>
-      <a href="#">Apartamento na Barra</a>
+      <a id="acessados0" href="#"></a>
+      <a id="acessados1" href="#"></a>
+      <a id="acessados2" href="#"></a>
+      <a id="acessados3" href="#"></a>
+      <a id="acessados4" href="#"></a>
+      <a id="acessados5" href="#"></a>
+      <a id="acessados6" href="#"></a>
     </div>
   </section>
 
